# mock-api-server-girl-power

./: .gitignore  TEAM_TASK.md  compose.yaml  pyproject.toml  readme.md  run_all_tests.sh  structure  tests.Dockerfile
config/: api_config.yaml  common_config.yaml  db_config.yaml  logger_config.yaml  web_ui_config.yaml
test_data/: db_test_data.yaml  web_ui_buyer_info_test_data.yaml  web_ui_common_test_data.yaml  web_ui_login_test_data.yaml  web_ui_test_data.yaml
test_data/api/: PUT_guids_positive.json  PUT_inventory_empty_list.json  http_status_codes.json  new_guid.json
test_data/test_data_api/: PUT_guids_empty_list.json  PUT_guids_without_key_body.json  PUT_guids_without_key_status_code.json  PUT_inventory_positive.json  PUT_inventory_without_status_code.json
test_data/web_ui/: entire_flow.yaml
tests/: test_api.py
tests/api/: conftest.py  constants.py  request_utilities.py  test_config.json  test_guids.py  test_inventory_appliances.py  test_inventory_files.py
tests/api/request_executors/: request_executor.py  request_executor_fixture.py  request_executor_http.py  request_executor_https.py
tests/db/: fixtures.py  test_database.py
tests/web_ui/: conftest.py  fixtures.py  test_cart_page.py  test_checkout_complete_page.py  test_checkout_one_page.py  test_checkout_two_page.py  test_inventory_page.py  test_login_page.py  test_web_ui_flow.py
tests_lib/common/: custom_logger.py  json_loader.py  logger.py  yaml_loaders.py
tests_lib/helpers/db/: database_helper.py  query_helper.py
tests_lib/helpers/web_ui/: assertions.py  base_page.py  cart_page.py  (+7 more)
(+4 files in other folders)
