[tool.poetry]
name = "tests_lib"
version = "0.1.0"
description = ""
authors = ["Liubomyr Pavlovskyi <zzee19191919@gmail.com>"]
readme = "readme.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
pytest = "^8.3.4"
requests = "^2.32.3"
webdriver-manager = "^4.0.2"
selenium = "4.27.1"
pyyaml = "^6.0.2"
pytest-custom-outputs = "^1.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
